test/sema/example_12.colgm
func main() {
    var a = 0

    var foo = if a == 1 {
        yield 1
    }

    var bar = if a == 2 {
        yield 2
    } else {
    }

    var baz = if a == 3 {
    } else {
        yield 4
    }
}